<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:src="@drawable/img_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgg_login"
        android:paddingVertical="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView0"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/login_to_your_account"
            android:textColor="@color/black90"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/text_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/use_your_username_and_password_to_continue"
            android:textColor="@color/black60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView0" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                style="@style/text_content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="Username" />

            <EditText
                android:id="@+id/etUsername"
                style="@style/text_subContent3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/bgg_edt"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="4dp"
                android:drawableTint="@color/blue"
                android:padding="8dp"
                android:textColor="@color/black90"
                android:textIsSelectable="true" />

            <TextView
                style="@style/text_content3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="18dp"
                android:text="Password" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/text_subContent3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bgg_edt"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="4dp"
                android:drawableTint="@color/blue"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black90"
                android:textIsSelectable="true" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/text_content3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/blue"
            app:cornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear" />

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/text_subContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:buttonTint="@color/black70"
            android:checked="false"
            android:text="@string/save_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/txt_forgotPassword"
            style="@style/text_subContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/app_ver_1_0_0"
            android:textColor="@color/black70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>