<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.home.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:background="@drawable/img_login">

        <TextView
            android:id="@+id/btnLogout"
            style="@style/text_content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_logout"
            android:drawablePadding="4dp"
            android:text="@string/logout"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/circleImageView" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/foto"
            app:civ_circle_background_color="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_subContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:textColor="@color/white_transparent2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            style="@style/text_subContent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nik"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:layout_editor_absoluteX="18dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginEnd="12dp"
                android:padding="8dp"
                android:background="@drawable/bgg_edt"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/text_content2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kunjungan \nbulan Agustus 2022"
                    android:textColor="@color/black80"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/text_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="50%"
                    android:textColor="@color/black90"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/text_subContent3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Persentase"
                    android:textColor="@color/black80"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_percent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:padding="8dp"
                    android:background="@drawable/bgg_edt"
                    android:layout_weight="1">

                    <TextView
                        style="@style/text_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50%"
                        android:textColor="@color/black90"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/text_subContent3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Score"
                        android:textColor="@color/black80"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/ic_warning"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:background="@drawable/bgg_edt"
                    android:layout_weight="1">

                    <TextView
                        style="@style/text_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50%"
                        android:textColor="@color/black90"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/text_subContent3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total Score"
                        android:textColor="@color/black80"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:src="@drawable/ic_cheklist"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            style="@style/text_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Menu"
            android:textColor="@color/black80"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnKunjungan"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bgg_button2"
                android:padding="24dp"
                android:src="@drawable/img_kunjungan"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@drawable/bgg_button2"
                android:padding="24dp"
                android:src="@drawable/img_target"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bgg_button2"
                android:padding="24dp"
                android:src="@drawable/img_dashboard"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:background="@drawable/bgg_button2"
                android:padding="24dp"
                android:src="@drawable/img_transmission"/>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</ScrollView>